# RobotArm-notebook

./: .gitignore  README.md  RobotArm.ipynb
Photos/: IMG_20200331_180758 - IMG_20200331_180804.pto  IMG_20200331_180758 - IMG_20200331_180804.xcf
cv/: opencv.ipynb  util.py
cv/aruco/: CMakeLists.txt  GenerateDiamond.cpp  README.md  board.html  webcam.yaml
cv/calibration/: RaspberryPiCamera.yaml
cv/calibration/calib_imgs/: cap.sh
